add new version and vignett

--- a/vignettes/components/manuscript.bib
+++ b/vignettes/components/manuscript.bib
@@ -1,20 +1,3 @@
-@Article{Akita2014,
-  abstract = {In recognition that intraurban exposure gradients may be as large as between-city variations, recent air pollution epidemiologic studies have become increasingly interested in capturing within-city exposure gradients. In addition, because of the rapidly accumulating health data, recent studies also need to handle large study populations distributed over large geographic domains. Even though several modeling approaches have been introduced, a consistent modeling framework capturing within-city exposure variability and applicable to large geographic domains is still missing. To address these needs, we proposed a modeling framework based on the Bayesian Maximum Entropy method that integrates monitoring data and outputs from existing air quality models based on Land Use Regression (LUR) and Chemical Transport Models (CTM). The framework was applied to estimate the yearly average NO2 concentrations over the region of Catalunya in Spain. By jointly accounting for the global scale variability in the concentration from the output of CTM and the intraurban scale variability through LUR model output, the proposed framework outperformed more conventional approaches.},
-  author = {Yasuyuki Akita and Jose M. Baldasano and Rob Beelen and Marta Cirach and Kees {de Hoogh} and Gerard Hoek and Mark Nieuwenhuijsen and Marc L. Serre and Audrey {de Nazelle}},
-  doi = {10.1021/es405390e},
-  file = {:home/ivan\_hanigan/references/Akita et al. - 2014 - Large scale air pollution estimation method combining land use regression and chemical transport modeling in a geo.pdf:pdf},
-  isbn = {0013-936X$\backslash$r1520-5851},
-  issn = {1520-5851},
-  journal = {Environmental science \& technology},
-  number = {8},
-  pages = {4452--9},
-  pmid = {24621302},
-  title = {{Large scale air pollution estimation method combining land use regression and chemical transport modeling in a geostatistical framework.}},
-  url = {http://www.ncbi.nlm.nih.gov/pubmed/24621302},
-  volume = {48},
-  year = {2014},
-}
-
 @Article{Peng2006,
   abstract = {The replication of important findings by multiple independent investigators is fundamental to the accumulation of scientific evidence. Researchers in the biologic and physical sciences expect results to be replicated by independent data, analytical methods, laboratories, and instruments. Epidemiologic studies are commonly used to quantify small health effects of important, but subtle, risk factors, and replication is of critical importance where results can inform substantial policy decisions. However, because of the time, expense, and opportunism of many current epidemiologic studies, it is often impossible to fully replicate their findings. An attainable minimum standard is {"}reproducibility,{"} which calls for data sets and software to be made available for verifying published findings and conducting alternative analyses. The authors outline a standard for reproducibility and evaluate the reproducibility of current epidemiologic research. They also propose methods for reproducible research and implement them by use of a case study in air pollution and health.},
   author = {Roger D. Peng and Francesca Dominici and Scott L. Zeger},
@@ -32,6 +15,23 @@
   year = {2006},
 }
 
+@Article{Akita2014,
+  abstract = {In recognition that intraurban exposure gradients may be as large as between-city variations, recent air pollution epidemiologic studies have become increasingly interested in capturing within-city exposure gradients. In addition, because of the rapidly accumulating health data, recent studies also need to handle large study populations distributed over large geographic domains. Even though several modeling approaches have been introduced, a consistent modeling framework capturing within-city exposure variability and applicable to large geographic domains is still missing. To address these needs, we proposed a modeling framework based on the Bayesian Maximum Entropy method that integrates monitoring data and outputs from existing air quality models based on Land Use Regression (LUR) and Chemical Transport Models (CTM). The framework was applied to estimate the yearly average NO2 concentrations over the region of Catalunya in Spain. By jointly accounting for the global scale variability in the concentration from the output of CTM and the intraurban scale variability through LUR model output, the proposed framework outperformed more conventional approaches.},
+  author = {Yasuyuki Akita and Jose M. Baldasano and Rob Beelen and Marta Cirach and Kees {de Hoogh} and Gerard Hoek and Mark Nieuwenhuijsen and Marc L. Serre and Audrey {de Nazelle}},
+  doi = {10.1021/es405390e},
+  file = {:home/ivan\_hanigan/references/Akita et al. - 2014 - Large scale air pollution estimation method combining land use regression and chemical transport modeling in a geo.pdf:pdf;:home/ivan\_hanigan/references/Akita et al. - 2014 - Large scale air pollution estimation method combining land use regression and chemical transport modeling in a (2).pdf:pdf},
+  isbn = {0013-936X$\backslash$r1520-5851},
+  issn = {1520-5851},
+  journal = {Environmental science \& technology},
+  number = {8},
+  pages = {4452--9},
+  pmid = {24621302},
+  title = {{Large scale air pollution estimation method combining land use regression and chemical transport modeling in a geostatistical framework.}},
+  url = {http://www.ncbi.nlm.nih.gov/pubmed/24621302},
+  volume = {48},
+  year = {2014},
+}
+
 @Article{Tukey1962,
   author = {John W. Tukey},
   doi = {10.1214/aoms/1177704711},
@@ -46,6 +46,39 @@
   url = {http://projecteuclid.org/euclid.aoms/1177704711 VN  - 33},
   volume = {33},
   year = {1962},
+}
+
+@Article{Hanigan2012e,
+  abstract = {There is concern in Australia that droughts substantially increase the incidence of suicide in rural populations, particularly among male farmers and their families. We investigated this possibility for the state of New South Wales (NSW), Australia between 1970 and 2007, analyzing data on suicides with a previously established climatic drought index. Using a generalized additive model that controlled for season, region, and long-term suicide trends, we found an increased relative risk of suicide of 15\% (95\% confidence interval, 8\%-22\%) for rural males aged 30-49 y when the drought index rose from the first quartile to the third quartile. In contrast, the risk of suicide for rural females aged >30 y declined with increased values of the drought index. We also observed an increased risk of suicide in spring and early summer. In addition there was a smaller association during unusually warm months at any time of year. The spring suicide increase is well documented in nontropical locations, although its cause is unknown. The possible increased risk of suicide during drought in rural Australia warrants public health focus and concern, as does the annual, predictable increase seen each spring and early summer. Suicide is a complex phenomenon with many interacting social, environmental, and biological causal factors. The relationship between drought and suicide is best understood using a holistic framework. Climate change projections suggest increased frequency and severity of droughts in NSW, accompanied and exacerbated by rising temperatures. Elucidating the relationships between drought and mental health will help facilitate adaptation to climate change.},
+  author = {I. C. Hanigan and C. D. Butler and P. N. Kokic and M. F. Hutchinson},
+  doi = {10.1073/pnas.1112965109},
+  file = {:home/ivan\_hanigan/references/Hanigan et al. - 2012 - Suicide and drought in New South Wales, Australia, 1970-2007.pdf:pdf},
+  isbn = {1091-6490 (Electronic)$\backslash$r0027-8424 (Linking)},
+  issn = {0027-8424},
+  journal = {Proceedings of the National Academy of Sciences of the United States of America},
+  keywords = {Adaptation,Adult,Agriculture,Agriculture: statistics \& numerical data,Climate Change,Climate Change: statistics \& numerical data,Depressive Disorder,Depressive Disorder: epidemiology,Depressive Disorder: psychology,Droughts,Droughts: statistics \& numerical data,Female,Humans,Incidence,Male,Middle Aged,New South Wales,New South Wales: epidemiology,Psychological,Rain,Risk Factors,Rural Population,Rural Population: statistics \& numerical data,Suicide,Suicide: psychology,Suicide: statistics \& numerical data,Suicide: trends},
+  month = {aug},
+  number = {35},
+  pages = {13950--13955},
+  pmid = {22891347},
+  title = {{Suicide and drought in New South Wales, Australia, 1970-2007}},
+  url = {http://www.pnas.org/cgi/content/abstract/1112965109v1 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3435226\&tool=pmcentrez\&rendertype=abstract},
+  volume = {109},
+  year = {2012},
+}
+
+@Article{OpenScienceCollaboration2015,
+  author = {{Open Science Collaboration}},
+  doi = {10.1126/science.aac4716},
+  file = {:home/ivan\_hanigan/references/Open Science Collaboration - 2015 - Estimating the reproducibility of psychological science.pdf:pdf},
+  issn = {0036-8075},
+  journal = {Science},
+  number = {6251},
+  pages = {aac4716--aac4716},
+  title = {{Estimating the reproducibility of psychological science}},
+  url = {http://www.sciencemag.org/cgi/doi/10.1126/science.aac4716},
+  volume = {349},
+  year = {2015},
 }
 
 @Article{Leek2015a,
